<resources>
    <string name="app_name">Local News</string>

    <string name="placeholder_article_type">Article type here</string>
    <string name="placeholder_headline">Sample news here</string>
    <string name="placeholder_author_date">FN LN &#8211; Jan 01, 1990</string>

    <string name="em_dash">&#8211;</string>

    <string name="no_articles">It appears that either your device \nis not connected to the internet. \n\nOR \n\nOur server is currently down. \n\nPlease check you internet or try again latter. </string>
    <string name="no_bookmarks">Press the Bookmarks icon below \nthe article to add it to this list.</string>

    <string name="news_subject">Checkout this news</string>
    <string name="news_title">Share</string>

    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarked Articles</string>

    <string name="settings_article_type_title">Select Article Type</string>
    <string name="settings_article_type_key" translatable="false">section</string>
    <string name="settings_article_type_default" translatable="false">world</string>

    <string name="settings_article_type_business_title">Business</string>
    <string name="settings_article_type_business_value" translatable="false">business</string>

    <string name="settings_article_type_education_title">Education</string>
    <string name="settings_article_type_education_value" translatable="false">education</string>

    <string name="settings_article_type_environment_title">Environment</string>
    <string name="settings_article_type_environment_value" translatable="false">environment</string>

    <string name="settings_article_type_science_title">Science</string>
    <string name="settings_article_type_science_value" translatable="false">science</string>

    <string name="settings_article_type_sports_title">Sports</string>
    <string name="settings_article_type_sports_value" translatable="false">sport</string>

    <string name="settings_article_type_technology_title">Technology and Innovation</string>
    <string name="settings_article_type_technology_value" translatable="false">technology</string>

    <string name="settings_article_type_tourism_title">Tourism</string>
    <string name="settings_article_type_tourism_value" translatable="false">travel</string>

    <string name="settings_article_type_world_title">World</string>
    <string name="settings_article_type_world_value" translatable="false">world</string>

    <string name="settings_number_of_articles_label">Number of Articles</string>
    <string name="settings_number_of_articles_key" translatable="false">number_of_articles</string>
    <string name="settings_number_of_articles_default" translatable="false">5</string>
    <string name="settings_number_of_articles_warning">Minimum 1 &amp; maximum 200 articles</string>

    <string name="no_internet_connection">No internet connection.</string>
</resources>
